QTreeWidget: Fixed reverse order of first level items in Drag and Drop

The list with taken indexes (selected items) was created in reverse
order but then retrieved from beginning. This was causing unexpected
rotation of the moved items.

Task-number: QTBUG-45320
Change-Id: I858d9af7b838bbd2618442c176dac0648b3512c4
Reviewed-by: Olivier Goffart (Woboq GmbH) <ogoffart@woboq.com>